# discord-markdown-copy-bot

./: Cargo.toml
src/: event_listener.rs  main.rs
